<resources>
    <string name="app_name">Homework09</string>
    <string-array name="options_array">
        <item>Contacts</item>
        <item>Conversaions</item>
        <item>Archived</item>
        <item>Settings</item>
        <item>Log out</item>
        <item>Exit</item>
    </string-array>

    <string name="archive">Archive</string>
    <string name="delete">Delete</string>
    <string name="SendButton">Send</string>
    <string name="messagehint">Enter Message</string>
    <string name="buttonSignUp">Sign Up</string>
    <string name="buttonCancel">Cancel</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="Cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="create">Create New Account</string>
    <string name="ContactHeader">Contact First and Last Name</string>
    <string name="name">Name:</string>
    <string name="phoneValue">Phone #:</string>
    <string name="emailResource">Email:</string>
    <string name="menu1">Edit Profile</string>
    <string name="menu2">Logout</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="EmailHint">Email</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
