<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.samuel.samshome8.SignupActivit">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userName"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:hint="@string/userName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:hint="@string/EmailHint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumber"
            android:layout_gravity="center_horizontal"
            android:hint="@string/phoneNumber"
            android:inputType="phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPass"
            android:layout_gravity="center_horizontal"
            android:hint="@string/confirmPass"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:id="@+id/buttonCancel"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
